# stack-git-hashes

./: .travis.yml  LICENSE  README.md  stack-git-hashes.cabal
app/: Main.hs
src/: Lib.hs
