name:                stack-git-hashes
version:             0.1.0.0
synopsis:            Updates git references in stack config files 
description:         Updates git references in stack config files
homepage:            https://github.com/githubuser/stack-git-hashes#readme
license:             MIT
license-file:        LICENSE
author:              Simon Hudon
maintainer:          simon.hudon@gmail.com
copyright:           2017 Simon Hudon
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
    , yaml
    , process
    , bytestring
    , text
    , monad-loops
    , directory
  default-extensions:  DeriveGeneric
  default-language:    Haskell2010

executable stack-git
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stack-git-hashes
  default-language:    Haskell2010

test-suite stack-git-hashes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , stack-git-hashes
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/stack-git-hashes
